--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-moment": "^1.1.2",
     "react-query": "^3.38.0"
   },
   "devDependencies": {
